--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,18 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Shopping List Page</h1>
-    <h2>LALALLA</h2>
-    <h3>Name: </h3>
+
+    <h5>Nama:</h5>
     <p>{{name}}</p>
-    <h3>Kelas: </h3>
+
+    <h5>Class:</h5>
     <p>{{class}}</p>
-    <h3>Hobskuy</h3>
-    <p>{{Hobskuy}}</p>
-</body>
-</html>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Description</th>
+            <th>Date Added</th>
+        </tr>
+
+        {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
+
+        {% for product in products %}
+            <tr>
+                <td>{{product.name}}</td>
+                <td>{{product.price}}</td>
+                <td>{{product.description}}</td>
+                <td>{{product.date_added}}</td>
+            </tr>
+        {% endfor %}
+    </table>
+
+    <br />
+
+    <a href="{% url 'main:create_product' %}">
+        <button>
+            Add New Product
+        </button>
+    </a>
+
+{% endblock content %}
