--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     <h1>Shopping List Page</h1>
-
+    <h1>Bismillah PPB dapet A</h1>
+    
     <h5>Nama:</h5>
     <p>{{name}}</p>
 
