--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -3,7 +3,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">{{name}}</a>
+      <a class="navbar-brand" href="#"><b>Hello, {{name}}</b></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,10 +30,11 @@
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <a href="{% url 'main:logout' %}">
+          <button>
+              Logout
+          </button>
+      </a>
       </div>
     </div>
   </nav>
@@ -85,12 +86,7 @@
             Add New Product
         </button>
     </a>
-    
-    <a href="{% url 'main:logout' %}">
-        <button>
-            Logout
-        </button>
-    </a>
+  
     <h5>Sesi terakhir login: {{ last_login }}</h5>
 
 
